--- a/vqe h2.ipynb
+++ b/vqe h2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -21,21 +21,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See https://arxiv.org/abs/1304.3061\n",
+    "https://arxiv.org/abs/1304.3061\n",
     "\n",
     "10.1103/PhysRevX.6.031007\n",
     "\n",
     "Second Quantized Hamiltonian\n",
     "\\begin{eqnarray*}\n",
-    "    \\mathcal{H}(r)=h_0 + \\sum_{ij} h_{ij}(r) a^{\\dagger}_i a_j +\\frac{1}{2} \\sum_{ijkl} h_{ijkl}(r) a^{\\dagger}_i a^{\\dagger}_ja_la_k\n",
+    "    \\mathcal{H}(r)=h_0 + \\sum_{pq} h_{pq}(r) a^{\\dagger}_p a_q +\\frac{1}{2} \\sum_{pqrs} h_{pqrs}(r) a^{\\dagger}_p a^{\\dagger}_qa_ra_s\n",
     "\\end{eqnarray*}\n",
     "\n",
     "\\begin{eqnarray*}\n",
-    "    h_{ij}(r)=\\int{d\\mathbf{r}}\\,\\chi^*_i(\\mathbf{r})\\left(-\\frac{1}{2}\\nabla^2-\\sum_{a}{\\frac{Z_a}{\\mathbf{r}_{a,\\mathbf{r}}}}\\right)\\chi_j(\\mathbf{r})\n",
+    "    h_{pq}(r)=\\int{d\\mathbf{r}}\\,\\phi^*_p(\\mathbf{r})\\left(-\\frac{1}{2}\\nabla^2-\\sum_{a}{\\frac{Z_a}{\\mathbf{r}_{a,\\mathbf{r}}}}\\right)\\phi_q(\\mathbf{r})\n",
     "\\end{eqnarray*}\n",
     "\n",
     "\\begin{eqnarray*}\n",
-    "    h_{ijkl}(r)=\\int{d\\mathbf{r_1}\\,d\\mathbf{r_2}}\\,\\chi^*_i(\\mathbf{r_1})\\chi^*_j(\\mathbf{r_2})r_{1,2}^{-1}\\chi_k(\\mathbf{r_1})\\chi_l(\\mathbf{r_2})\n",
+    "    h_{pqrs}(r)=\\int{d\\mathbf{r_1}\\,d\\mathbf{r_2}}\\,\\phi^*_p(\\mathbf{r_1})\\phi^*_q(\\mathbf{r_2})r_{1,2}^{-1}\\phi_r(\\mathbf{r_1})\\phi_s(\\mathbf{r_2})\n",
     "\\end{eqnarray*}\n",
     "\n",
     "Jordan-Wigner transformation\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,23 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1,  0,  0,  0],\n",
-       "       [ 0, -1,  0,  0],\n",
-       "       [ 0,  0, -1,  0],\n",
-       "       [ 0,  0,  0,  1]])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "II = ID.kron(ID)\n",
     "XX = X.kron(X)\n",
@@ -86,15 +72,16 @@
     "ZI = Z.kron(ID)\n",
     "IZ = ID.kron(Z)\n",
     "\n",
-    "sig_iz = [IZ.get()[i,i] for i in range(len(IZ.get()))]\n",
-    "sig_zi = [ZI.get()[i,i] for i in range(len(ZI.get()))]\n",
-    "ZZ.get()"
+    "sig_is = np.kron([1, 1], [1, -1])\n",
+    "sig_si = np.kron([1, -1], [1, 1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -117,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +113,7 @@
        "(-1.145629444817661+0j)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,14 +160,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:586: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[k] = func(sim[k])\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:618: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxr\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:611: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxe\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:614: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxr\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:637: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxcc\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:627: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxc\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "-1.145629444817662\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:644: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[j] = func(sim[j])\n"
      ]
     }
    ],
@@ -201,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,8 +262,8 @@
     "          \n",
     "    result = logicQuBit.Measure([q1,q2])\n",
     "    zz = expectation_value(result)\n",
-    "    iz = expectation_value(result, sig_iz) # [zz, iz] = 0\n",
-    "    zi = expectation_value(result, sig_zi) # [zz, zi] = 0\n",
+    "    iz = expectation_value(result, sig_is) # [zz, iz] = 0\n",
+    "    zi = expectation_value(result, sig_si) # [zz, zi] = 0\n",
     "    return zz, iz, zi\n",
     "\n",
     "def expectation_energy(params):\n",
@@ -264,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,14 +330,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3773/1088512639.py:15: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "/tmp/ipykernel_10647/1088512639.py:15: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  gradients[i] = expectation_right - expectation_left\n"
      ]
     },
@@ -332,196 +345,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8036464520471593\n",
-      "0.066507202474833\n",
-      "0.0650056254104705\n",
-      "0.06317151231647644\n",
-      "0.06091693993038949\n",
-      "0.05811410585290627\n",
-      "0.05457926482233477\n",
-      "0.05005001831855277\n",
-      "0.044152640168749924\n",
-      "0.03635451465793427\n",
-      "0.025895344668580733\n",
-      "0.011692466630882914\n",
-      "0.007769389385788472\n",
-      "0.034494421125069646\n",
-      "0.07072792273707304\n",
-      "0.11772771845743873\n",
-      "0.17236247800167742\n",
-      "0.2216826159166947\n",
-      "0.243294660336585\n",
-      "0.22441170862483945\n",
-      "0.18033502618255065\n",
-      "0.1359246097373531\n",
-      "0.10242284608909788\n",
-      "0.0798027805608332\n",
-      "0.06496061081646312\n",
-      "0.05509308699947513\n",
-      "0.04828391929694614\n",
-      "0.04334248948401881\n",
-      "0.03955883451480463\n",
-      "0.03651667177241848\n",
-      "0.033972086248421046\n",
-      "0.03178015374690006\n",
-      "0.029852259476651183\n",
-      "0.028131865310179943\n",
-      "0.026580948989635464\n",
-      "0.025172460810486658\n",
-      "0.023886115252691575\n",
-      "0.022706011815177576\n",
-      "0.021619255713053308\n",
-      "0.020615127545080138\n",
-      "0.019684558589338944\n",
-      "0.018819780558981994\n",
-      "0.018014078684707502\n",
-      "0.017261608965480534\n",
-      "0.0165572574733992\n",
-      "0.015896528755417538\n",
-      "0.015275455375363296\n",
-      "0.01469052344427561\n",
-      "0.01413861061991259\n",
-      "0.013616934052469104\n",
-      "0.013123006394037096\n",
-      "0.01265459842332744\n",
-      "0.012209707145471304\n",
-      "0.01178652845448876\n",
-      "0.0113834336194403\n",
-      "0.01099894899031668\n",
-      "0.01063173842661486\n",
-      "0.01028058803715827\n",
-      "0.009944392888937878\n",
-      "0.009622145399075646\n",
-      "0.009312925170132227\n",
-      "0.009015890066915923\n",
-      "0.008730268364310262\n",
-      "0.00845535182161647\n",
-      "0.00819048956057572\n",
-      "0.007935082642291008\n",
-      "0.007688579253448596\n",
-      "0.007450470424940445\n",
-      "0.0072202862167562165\n",
-      "0.006997592312064066\n",
-      "0.006781986971118592\n",
-      "0.006573098302144059\n",
-      "0.006370581811935394\n",
-      "0.006174118203669435\n",
-      "0.00598341139348213\n",
-      "0.005798186720886438\n",
-      "0.0056181893310795344\n",
-      "0.0054431827098086055\n",
-      "0.005272947353693304\n",
-      "0.0051072795608303745\n",
-      "0.004945990328225493\n",
-      "0.004788904344028955\n",
-      "0.00463585906387054\n",
-      "0.004486703861699876\n",
-      "0.004341299246539403\n",
-      "0.004199516137453833\n",
-      "0.004061235189805662\n",
-      "0.003926346166599941\n",
-      "0.0037947473493468165\n",
-      "0.0036663449834649867\n",
-      "0.003541052753783847\n",
-      "0.0034187912861978254\n",
-      "0.0032994876720029605\n",
-      "0.0031830750118770953\n",
-      "0.00306949197687245\n",
-      "0.002958682384212829\n",
-      "0.002850594786028695\n",
-      "0.002745182069552394\n",
-      "0.002642401067622629\n",
-      "0.00254221217868731\n",
-      "0.002444578995794984\n",
-      "0.00234946794435318\n",
-      "0.00225684792871593\n",
-      "0.0021666899878978463\n",
-      "0.0020789669609333275\n",
-      "0.0019936531626011944\n",
-      "0.0019107240703921252\n",
-      "0.001830156023730732\n",
-      "0.0017519259365625997\n",
-      "0.0016760110244711662\n",
-      "0.0016023885475332234\n",
-      "0.0015310355700887401\n",
-      "0.0014619287385823493\n",
-      "0.001395044078527155\n",
-      "0.0013303568115556469\n",
-      "0.001267841193372074\n",
-      "0.001207470373244729\n",
-      "0.0011492162755168123\n",
-      "0.0010930495033782406\n",
-      "0.0010389392649515494\n",
-      "0.0009868533215107583\n",
-      "0.0009367579574171836\n",
-      "0.0008886179711642406\n",
-      "0.0008423966866755728\n",
-      "0.0007980559838254575\n",
-      "0.0007555563469604787\n",
-      "0.0007148569300399615\n",
-      "0.0006759156368702224\n",
-      "0.0006386892148057266\n",
-      "0.0006031333601988625\n",
-      "0.0005692028338184635\n",
-      "0.0005368515844462879\n",
-      "0.0005060328788450419\n",
-      "0.00047669943631742373\n",
-      "0.0004488035661385642\n",
-      "0.00042229730620631234\n",
-      "0.00039713256134799035\n",
-      "0.00037326123982861503\n",
-      "0.000350635386737963\n",
-      "0.0003292073130577444\n",
-      "0.0003089297193449858\n",
-      "0.00028975581312906673\n",
-      "0.0002716394192474325\n",
-      "0.00025453508250466994\n",
-      "0.0002383981621668918\n",
-      "0.00022318491794592887\n",
-      "0.0002088525872634417\n",
-      "0.00019535945367726848\n",
-      "0.00018266490650120648\n",
-      "0.00017072949170471308\n",
-      "0.00015951495430366336\n",
-      "0.0001489842725071744\n",
-      "0.00013910168394981604\n",
-      "0.00012983270440386496\n",
-      "0.00012114413940622626\n",
-      "0.00011300408925776773\n",
-      "0.00010538194787598765\n",
-      "9.824839602126656e-05\n",
-      "9.157538938320275e-05\n",
-      "8.533614205150086e-05\n",
-      "7.950510585946757e-05\n",
-      "7.405794609849359e-05\n",
-      "6.897151407517232e-05\n",
-      "6.422381695611601e-05\n",
-      "5.979398534547431e-05\n",
-      "5.566223898673117e-05\n",
-      "5.180985097782975e-05\n",
-      "4.821911084587627e-05\n",
-      "4.487328680838343e-05\n",
-      "4.175658751473521e-05\n",
-      "3.885412353576978e-05\n",
-      "3.615186884373123e-05\n",
-      "3.3636622498500746e-05\n",
-      "3.129597072179524e-05\n",
-      "2.9118249534887397e-05\n",
-      "2.7092508096654422e-05\n",
-      "2.5208472864246545e-05\n",
-      "2.345651268018112e-05\n",
-      "2.1827604866325734e-05\n",
-      "2.031330239737894e-05\n",
-      "1.8905702203947383e-05\n",
-      "1.7597414638581554e-05\n",
-      "1.6381534141129972e-05\n",
-      "1.5251611109712293e-05\n",
-      "1.4201624991605488e-05\n",
-      "1.3225958578416686e-05\n",
-      "1.2319373517005738e-05\n",
-      "1.1476986991970639e-05\n",
-      "1.0694249584247695e-05\n",
-      "9.966924265469856e-06\n"
+      "3.2771275942132028\n",
+      "0.25087340996984175\n",
+      "0.21642798860086027\n",
+      "0.17299785149256727\n",
+      "0.127042900992303\n",
+      "0.08495812918109738\n",
+      "0.05122215078222822\n",
+      "0.027296428517020133\n",
+      "0.012076889658794665\n",
+      "0.003307506724051168\n",
+      "0.001234210214421605\n",
+      "0.0032382230817722957\n",
+      "0.0038293853294496527\n",
+      "0.0036995397718261325\n",
+      "0.0032503120313920886\n",
+      "0.0027019008242667453\n",
+      "0.0021662136382552544\n",
+      "0.0016931563188248289\n",
+      "0.0012988346634378312\n",
+      "0.000982184806577524\n",
+      "0.0007344376019901011\n",
+      "0.0005442638721736559\n",
+      "0.00040038835375455495\n",
+      "0.0002927686445351463\n",
+      "0.00021299570138316737\n",
+      "0.00015429889043244716\n",
+      "0.00011137199120508923\n",
+      "8.013731289757686e-05\n",
+      "5.750742577281809e-05\n",
+      "4.1171532305650516e-05\n",
+      "2.94159505212499e-05\n",
+      "2.0979269161391922e-05\n",
+      "1.4938675643283439e-05\n",
+      "1.0622518519409763e-05\n",
+      "7.5440569521911804e-06\n"
      ]
     }
    ],
@@ -538,14 +396,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(-1.1455966226569918+0j)\n"
+      "(-1.1456294446036503+0j)\n"
      ]
     }
    ],
