--- a/vqe_2q qwc.ipynb
+++ b/vqe_2q qwc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -21,12 +21,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See https://arxiv.org/abs/1304.3061"
+    "https://arxiv.org/abs/1304.3061\n",
+    "\n",
+    "https://cpb-us-w2.wpmucdn.com/voices.uchicago.edu/dist/0/2327/files/2020/10/SimultaneousMeasurementVQE.pdf1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +54,7 @@
        "       [ 0,  0,  0,  1]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,38 +80,38 @@
     "ZX = Z.kron(X)\n",
     "ZY = Z.kron(Y)\n",
     "\n",
-    "sig_yy = [YY.get()[i,i] for i in range(len(YY.get()))]\n",
-    "sig_iz = [IZ.get()[i,i] for i in range(len(IZ.get()))]\n",
-    "sig_zi = [ZI.get()[i,i] for i in range(len(ZI.get()))]\n",
-    "sig_iz\n",
+    "sig_is = np.kron([1, 1], [1, -1])\n",
+    "sig_si = np.kron([1, -1], [1, 1])\n",
     "ZZ.get()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-2.23606797749979+0j)"
+       "(-10+0j)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "H = XZ + ZI*2 # -ZX + 2*ZI\n",
+    "#H = XZ + ZI*2 # -ZX + 2*ZI\n",
+    "\n",
+    "H = XX*3 + ZZ*7\n",
     "\n",
     "min(scipy.linalg.eig(H.get())[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,69 +133,43 @@
     "    q2.RY(params[3])\n",
     "    q2.CNOT(q1)\n",
     "    q1.RY(params[4])\n",
-    "    q2.RY(params[5])"
+    "    q2.RY(params[5])\n",
+    "    q1.CNOT(q2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:586: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  fsim[k] = func(sim[k])\n",
-      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:611: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  fsim[-1] = fxe\n",
-      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:618: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  fsim[-1] = fxr\n",
-      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:614: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  fsim[-1] = fxr\n",
-      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:627: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  fsim[-1] = fxc\n",
-      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:637: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  fsim[-1] = fxcc\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " final_simplex: (array([[ 3.988717  ,  1.21161093, -0.99924905, -1.78975361, -0.80799974,\n",
-      "        -1.84695884],\n",
-      "       [ 3.988717  ,  1.21161093, -0.99924905, -1.78975361, -0.80799974,\n",
-      "        -1.84695884],\n",
-      "       [ 3.988717  ,  1.21161093, -0.99924905, -1.78975361, -0.80799974,\n",
-      "        -1.84695884],\n",
-      "       [ 3.988717  ,  1.21161093, -0.99924905, -1.78975361, -0.80799974,\n",
-      "        -1.84695884],\n",
-      "       [ 3.988717  ,  1.21161093, -0.99924905, -1.78975361, -0.80799974,\n",
-      "        -1.84695884],\n",
-      "       [ 3.988717  ,  1.21161093, -0.99924905, -1.78975361, -0.80799974,\n",
-      "        -1.84695884],\n",
-      "       [ 3.988717  ,  1.21161093, -0.99924905, -1.78975361, -0.80799974,\n",
-      "        -1.84695884]]), array([-2.23606798, -2.23606798, -2.23606798, -2.23606798, -2.23606798,\n",
-      "       -2.23606798, -2.23606798]))\n",
-      "           fun: -2.2360679774997907\n",
+      " final_simplex: (array([[ 5.31847022, -0.42327127, -3.1307354 ,  1.06588762,  1.01423211,\n",
+      "        -3.42077752],\n",
+      "       [ 5.31847022, -0.42327127, -3.1307354 ,  1.06588762,  1.01423211,\n",
+      "        -3.42077752],\n",
+      "       [ 5.31847022, -0.42327127, -3.1307354 ,  1.06588762,  1.01423211,\n",
+      "        -3.42077752],\n",
+      "       [ 5.31847022, -0.42327127, -3.1307354 ,  1.06588762,  1.01423211,\n",
+      "        -3.42077752],\n",
+      "       [ 5.31847022, -0.42327127, -3.1307354 ,  1.06588762,  1.01423211,\n",
+      "        -3.42077752],\n",
+      "       [ 5.31847022, -0.42327127, -3.1307354 ,  1.06588762,  1.01423211,\n",
+      "        -3.42077752],\n",
+      "       [ 5.31847022, -0.42327127, -3.1307354 ,  1.06588762,  1.01423211,\n",
+      "        -3.42077752]]), array([-10., -10., -10., -10., -10., -10., -10.]))\n",
+      "           fun: -10.000000000000004\n",
       "       message: 'Optimization terminated successfully.'\n",
-      "          nfev: 650\n",
-      "           nit: 348\n",
+      "          nfev: 1065\n",
+      "           nit: 614\n",
       "        status: 0\n",
       "       success: True\n",
-      "             x: array([ 3.988717  ,  1.21161093, -0.99924905, -1.78975361, -0.80799974,\n",
-      "       -1.84695884])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:644: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  fsim[j] = func(sim[j])\n"
+      "             x: array([ 5.31847022, -0.42327127, -3.1307354 ,  1.06588762,  1.01423211,\n",
+      "       -3.42077752])\n"
      ]
     }
    ],
@@ -214,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,8 +226,10 @@
     "    q2.RX(pi/2)\n",
     "    \n",
     "    result = logicQuBit.Measure([q1,q2])\n",
-    "    result = expectation_value(result)\n",
-    "    return result\n",
+    "    yy = expectation_value(result)\n",
+    "    iy = expectation_value(result, sig_is)\n",
+    "    yi = expectation_value(result, sig_si)\n",
+    "    return yy, iy, yi\n",
     "\n",
     "def sigma_zz(params):\n",
     "    logicQuBit  = LogicQuBit(2, first_left = False)\n",
@@ -262,8 +240,8 @@
     "          \n",
     "    result = logicQuBit.Measure([q1,q2])\n",
     "    zz = expectation_value(result)\n",
-    "    iz = expectation_value(result, sig_iz) # [zz, iz] = 0\n",
-    "    zi = expectation_value(result, sig_zi) # [zz, zi] = 0\n",
+    "    iz = expectation_value(result, sig_is) # [zz, iz] = 0\n",
+    "    zi = expectation_value(result, sig_si) # [zz, zi] = 0\n",
     "    return zz, iz, zi\n",
     "\n",
     "def sigma_zx(params):\n",
@@ -281,48 +259,68 @@
     "    zx = expectation_value(result)\n",
     "    return zx\n",
     "\n",
+    "def sigma_xx_zz(params):\n",
+    "    logicQuBit  = LogicQuBit(2)\n",
+    "    q1 = Qubit()\n",
+    "    q2 = Qubit()\n",
+    "    \n",
+    "    ansatz_2q(q1,q2,params)\n",
+    "    \n",
+    "    # medida na base de bell\n",
+    "    q2.CX(q1)\n",
+    "    q1.H()    # Hx1\n",
+    "    \n",
+    "    result = logicQuBit.Measure([q1,q2])\n",
+    "    zi = expectation_value(result, sig_si)\n",
+    "    iz = expectation_value(result, sig_is)\n",
+    "    xx = zi\n",
+    "    zz = iz\n",
+    "    return xx, zz\n",
+    "\n",
     "def expectation_energy(params):\n",
     "    #xx =  sigma_xx(params)\n",
     "    #yy =  sigma_yy(params)\n",
-    "    zz, iz, zi = sigma_zz(params)\n",
-    "    zx = sigma_zx(params)\n",
-    "\n",
-    "    result = -zx + zi*2\n",
+    "    \n",
+    "    #zz, iz, zi = sigma_zz(params)\n",
+    "    #zx = sigma_zx(params)   \n",
+    "    #result = -zx + zi*2\n",
+    "    \n",
+    "    xx, zz = sigma_xx_zz(params) \n",
+    "    result = xx*3 + zz*7\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " final_simplex: (array([[ 0.37729988, -0.32129798,  0.33452791,  2.38985834, -1.3110545 ,\n",
-      "         0.47596158],\n",
-      "       [ 0.37729988, -0.32129798,  0.3345279 ,  2.38985834, -1.3110545 ,\n",
-      "         0.47596158],\n",
-      "       [ 0.37729988, -0.32129798,  0.3345279 ,  2.38985834, -1.3110545 ,\n",
-      "         0.47596158],\n",
-      "       [ 0.37729988, -0.32129798,  0.3345279 ,  2.38985834, -1.3110545 ,\n",
-      "         0.47596158],\n",
-      "       [ 0.37729988, -0.32129798,  0.3345279 ,  2.38985834, -1.3110545 ,\n",
-      "         0.47596158],\n",
-      "       [ 0.37729988, -0.32129798,  0.3345279 ,  2.38985834, -1.3110545 ,\n",
-      "         0.47596158],\n",
-      "       [ 0.37729988, -0.32129798,  0.3345279 ,  2.38985834, -1.3110545 ,\n",
-      "         0.47596158]]), array([-2.23606798, -2.23606798, -2.23606798, -2.23606798, -2.23606798,\n",
-      "       -2.23606798, -2.23606798]))\n",
-      "           fun: -2.2360679774997907\n",
+      " final_simplex: (array([[ 2.19396352, -0.53207923,  0.91245827, -3.03402174,  0.31749551,\n",
+      "        -1.89342844],\n",
+      "       [ 2.19396352, -0.53207923,  0.91245827, -3.03402174,  0.31749551,\n",
+      "        -1.89342844],\n",
+      "       [ 2.19396352, -0.53207923,  0.91245827, -3.03402174,  0.31749551,\n",
+      "        -1.89342844],\n",
+      "       [ 2.19396352, -0.53207923,  0.91245827, -3.03402174,  0.31749551,\n",
+      "        -1.89342844],\n",
+      "       [ 2.19396352, -0.53207923,  0.91245828, -3.03402174,  0.31749551,\n",
+      "        -1.89342844],\n",
+      "       [ 2.19396352, -0.53207923,  0.91245827, -3.03402174,  0.31749551,\n",
+      "        -1.89342844],\n",
+      "       [ 2.19396352, -0.53207923,  0.91245827, -3.03402174,  0.31749551,\n",
+      "        -1.89342844]]), array([-10., -10., -10., -10., -10., -10., -10.]))\n",
+      "           fun: -10.000000000000005\n",
       "       message: 'Optimization terminated successfully.'\n",
-      "          nfev: 591\n",
-      "           nit: 313\n",
+      "          nfev: 932\n",
+      "           nit: 543\n",
       "        status: 0\n",
       "       success: True\n",
-      "             x: array([ 0.37729988, -0.32129798,  0.33452791,  2.38985834, -1.3110545 ,\n",
-      "        0.47596158])\n"
+      "             x: array([ 2.19396352, -0.53207923,  0.91245827, -3.03402174,  0.31749551,\n",
+      "       -1.89342844])\n"
      ]
     }
    ],
@@ -333,13 +331,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradient(params, evaluate):\n",
+    "def gradient(params, evaluate, shift = pi/2):\n",
     "    n_params = params.shape[0]\n",
-    "    shift = pi/2\n",
     "    gradients = np.zeros(n_params)\n",
     "    \n",
     "    for i in range(n_params):\n",
@@ -358,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,26 +365,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.977734310060142\n",
-      "0.14494446357487012\n",
-      "0.14747248710400607\n",
-      "0.03824243160315213\n",
-      "0.0003765805649342535\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10578/1088512639.py:15: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "/tmp/ipykernel_10773/2399136664.py:14: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  gradients[i] = expectation_right - expectation_left\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.242381289750311\n",
+      "1.2889758380243934\n",
+      "0.8469000184874783\n",
+      "1.715505786108866\n",
+      "1.2857087151314395\n",
+      "0.6665949071449118\n",
+      "0.6217152863618391\n",
+      "0.4502480346945008\n",
+      "0.4015030288008472\n",
+      "0.3084211700757258\n",
+      "0.26803408924379646\n",
+      "0.21245510675985635\n",
+      "0.18154598875298378\n",
+      "0.14636982828737843\n",
+      "0.1237463383802897\n",
+      "0.10074594911990808\n",
+      "0.08459198537134305\n",
+      "0.06927493025400655\n",
+      "0.05790614903768021\n",
+      "0.04759712440969022\n",
+      "0.03966686651250573\n",
+      "0.03268382882723664\n",
+      "0.027183388111598594\n",
+      "0.022434057092212578\n",
+      "0.018633066423850764\n",
+      "0.015394340051459787\n",
+      "0.01277418938381536\n",
+      "0.010561655143450865\n",
+      "0.00875847779291572\n",
+      "0.007245152363900109\n",
+      "0.006005594294535843\n",
+      "0.004969651583073942\n",
+      "0.004118184616198395\n",
+      "0.0034086270007260833\n",
+      "0.0028240437050082168\n",
+      "0.0023378482643301446\n",
+      "0.0019366364025408256\n",
+      "0.001603400193223914\n",
+      "0.0013281053403841891\n",
+      "0.0010996639112277329\n",
+      "0.0009107986294276671\n"
      ]
     }
    ],
@@ -395,7 +428,7 @@
     "lr = 0.1\n",
     "err = 1\n",
     "while err > 1e-3:\n",
-    "    grad = gradient(params, expectation_energy)\n",
+    "    grad = gradient(params, expectation_energy, pi/1.3)\n",
     "    params = params - lr*grad\n",
     "    err = abs(sum(params - last_params))\n",
     "    last_params = np.array(params)\n",
@@ -404,16 +437,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-2.2360516529875394+0j)"
+       "(-9.999999421740936+0j)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
