--- a/vqe_2q.ipynb
+++ b/vqe_2q.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cuda is not available!\n",
+      "logicqubit version 1.5.8\n"
+     ]
+    }
+   ],
    "source": [
     "from logicqubit.logic import *\n",
     "from cmath import *\n",
@@ -19,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +54,7 @@
        "       [ 0,  0,  0,  1]])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,16 +66,16 @@
     "ZZ = Z.kron(Z)\n",
     "IZ = ID.kron(Z)\n",
     "ZI = Z.kron(ID)\n",
-    "sig_yy = [YY.get()[i,i] for i in range(len(YY.get()))]\n",
-    "sig_iz = [IZ.get()[i,i] for i in range(len(IZ.get()))]\n",
-    "sig_zi = [ZI.get()[i,i] for i in range(len(ZI.get()))]\n",
-    "sig_iz\n",
+    "sig_ss = np.kron([1, -1], [1, -1])\n",
+    "sig_is = np.kron([1, 1], [1, -1])\n",
+    "sig_si = np.kron([1, -1], [1, 1])\n",
+    "sig_is\n",
     "ZZ.get()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +84,7 @@
        "(-4.123105625617661+0j)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,9 +124,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:586: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[k] = func(sim[k])\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:618: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxr\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:611: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxe\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:614: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxr\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:627: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxc\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:637: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxcc\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -146,6 +173,14 @@
       "             x: array([-1.08588037, -1.20307451,  1.5931768 ,  0.98904206, -0.43267192,\n",
       "        0.89020761])\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:644: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[j] = func(sim[j])\n"
+     ]
     }
    ],
    "source": [
@@ -165,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,8 +248,8 @@
     "          \n",
     "    result = logicQuBit.Measure([q1,q2])\n",
     "    zz = expectation_value(result)\n",
-    "    iz = expectation_value(result, sig_iz) # [zz, iz] = 0\n",
-    "    zi = expectation_value(result, sig_zi) # [zz, zi] = 0\n",
+    "    iz = expectation_value(result, sig_is) # [zz, iz] = 0\n",
+    "    zi = expectation_value(result, sig_si) # [zz, zi] = 0\n",
     "    return zz, iz, zi\n",
     "\n",
     "def expectation_energy(params):\n",
@@ -228,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -268,13 +303,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradient(params, evaluate):\n",
+    "def gradient(params, evaluate, shift = pi/2):\n",
     "    n_params = params.shape[0]\n",
-    "    shift = pi/2\n",
     "    gradients = np.zeros(n_params)\n",
     "    \n",
     "    for i in range(n_params):\n",
@@ -293,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,14 +337,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_14932/1088512639.py:15: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "/tmp/ipykernel_10875/2399136664.py:14: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  gradients[i] = expectation_right - expectation_left\n"
      ]
     },
@@ -318,44 +352,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.7006599878076414\n",
-      "1.2545549614764386\n",
-      "1.1497605201879366\n",
-      "0.22736544200075426\n",
-      "0.0978543078026497\n",
-      "0.017160441604664012\n",
-      "0.18828757124844753\n",
-      "0.2610390239473779\n",
-      "0.5487657730870437\n",
-      "0.8427397298047863\n",
-      "1.1747962716587876\n",
-      "1.175037952625668\n",
-      "1.2701384756107241\n",
-      "0.9374663154575005\n",
-      "1.0295511077500044\n",
-      "0.6964526889194024\n",
-      "0.6839972299070306\n",
-      "0.46189779463680064\n",
-      "0.39424493769346963\n",
-      "0.2737567403818101\n",
-      "0.21726307543124623\n",
-      "0.15446090748048297\n",
-      "0.118717492097142\n",
-      "0.08565273277681701\n",
-      "0.06464332044561588\n",
-      "0.046960241224349886\n",
-      "0.03499562474990564\n",
-      "0.025460538146252987\n",
-      "0.018780133747339722\n",
-      "0.013631896309170555\n",
-      "0.009958528103665376\n",
-      "0.007189234555726842\n",
-      "0.005197279928212284\n",
-      "0.003719269828432792\n",
-      "0.0026546739228606175\n",
-      "0.0018751334865257374\n",
-      "0.0013156704131106478\n",
-      "0.0009112873837680557\n"
+      "6.482663126567106\n",
+      "0.38223934285331607\n",
+      "0.24488311284400144\n",
+      "0.15336235431677614\n",
+      "0.09703052432549342\n",
+      "0.06171935514192828\n",
+      "0.039443704313149364\n",
+      "0.025282440007640683\n",
+      "0.01623888046263866\n",
+      "0.010444314063609794\n",
+      "0.006723457691249157\n",
+      "0.004330708948179662\n",
+      "0.0027905545833459833\n",
+      "0.0017985774254206666\n",
+      "0.0011594101206759966\n",
+      "0.0007474632522979086\n"
      ]
     }
    ],
@@ -363,7 +375,7 @@
     "lr = 0.1\n",
     "err = 1\n",
     "while err > 1e-3:\n",
-    "    grad = gradient(params, expectation_energy)\n",
+    "    grad = gradient(params, expectation_energy, pi/1.2)\n",
     "    params = params - lr*grad\n",
     "    err = abs(sum(params - last_params))\n",
     "    last_params = np.array(params)\n",
@@ -372,16 +384,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-4.123095913489123+0j)"
+       "(-4.123104878258455+0j)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
