--- a/vqe_3q qwc.ipynb
+++ b/vqe_3q qwc.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cuda is not available!\n",
+      "logicqubit version 1.5.8\n"
+     ]
+    }
+   ],
    "source": [
     "from logicqubit.logic import *\n",
     "from cmath import *\n",
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +86,7 @@
        "True"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -97,22 +106,22 @@
        "array([ 1, -1,  1, -1, -1,  1, -1,  1])"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# autovalores de X,Y,Z: [1, -1] e de I: [1, 1]\n",
-    "eigv_izz = np.kron(np.kron([1, 1], [1, -1]), [1, -1])\n",
-    "eigv_xyi = np.kron(np.kron([1, -1], [1, -1]), [1, 1])\n",
-    "eigv_xiz = np.kron(np.kron([1, -1], [1, 1]), [1, -1])\n",
-    "eigv_xiz"
+    "sig_iss = np.kron(np.kron([1, 1], [1, -1]), [1, -1])\n",
+    "sig_ssi = np.kron(np.kron([1, -1], [1, -1]), [1, 1])\n",
+    "sig_sis = np.kron(np.kron([1, -1], [1, 1]), [1, -1])\n",
+    "sig_sis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +130,7 @@
        "(-12+4.1241847957050005e-32j)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,11 +181,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:586: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[k] = func(sim[k])\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:611: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxe\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:618: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxr\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:614: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxr\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:637: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxcc\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:627: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxc\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -267,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,8 +334,8 @@
     "    q2.RX(pi/2)\n",
     "    \n",
     "    result = logicQuBit.Measure([q1,q2,q3])\n",
-    "    xyi = expectation_value(result, eigv_xyi)\n",
-    "    xiz = expectation_value(result, eigv_xiz) \n",
+    "    xyi = expectation_value(result, sig_ssi)\n",
+    "    xiz = expectation_value(result, sig_sis) \n",
     "    return xyi, xiz\n",
     "\n",
     "def sigma_yyy(params):\n",
@@ -338,7 +365,7 @@
     "          \n",
     "    result = logicQuBit.Measure([q1,q2,q3])\n",
     "    zzz = expectation_value(result)\n",
-    "    izz = expectation_value(result, eigv_izz) # [zzz, izz] = 0\n",
+    "    izz = expectation_value(result, sig_iss) # [zzz, izz] = 0\n",
     "    return zzz, izz \n",
     "\n",
     "def expectation_energy(params):\n",
@@ -350,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,14 +479,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10963/3485820173.py:14: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "/tmp/ipykernel_11017/3485820173.py:14: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  gradients[i] = expectation_right - expectation_left\n"
      ]
     },
@@ -467,46 +494,112 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.176943365736145\n",
-      "0.06327298013175237\n",
-      "0.14458848544921632\n",
-      "0.059136254982485176\n",
-      "0.118667422049515\n",
-      "0.11267216150465134\n",
-      "0.19430885109799192\n",
-      "0.1889941798424362\n",
-      "0.2598093049329683\n",
-      "0.24409229084231338\n",
-      "0.24401949212183766\n",
-      "0.18457041320298662\n",
-      "0.14065834719081186\n",
-      "0.09895362780184351\n",
-      "0.0712221185239285\n",
-      "0.05016137032533714\n",
-      "0.035396220441170544\n",
-      "0.02482822359617587\n",
-      "0.017420451286068415\n",
-      "0.012200784792316477\n",
-      "0.008548169721927668\n",
-      "0.005983862378165283\n",
-      "0.0041907085197650405\n",
-      "0.0029330701826023597\n",
-      "0.0020538433293660454\n",
-      "0.0014374009584610993\n",
-      "0.0010064617455279867\n",
-      "0.0007043701730878648\n",
-      "0.0004931818076628014\n",
-      "0.00034515204259331076\n",
-      "0.00024166187984471233\n",
-      "0.00016912737763585817\n",
-      "0.00011841464023123471\n",
-      "8.287328973644037e-05\n",
-      "5.8023100120041526e-05\n",
-      "4.0608213764037336e-05\n",
-      "2.8431233786307963e-05\n",
-      "1.9898141135232805e-05\n",
-      "1.393125302584508e-05\n",
-      "9.75013782160694e-06\n"
+      "0.8184556076668226\n",
+      "0.38752317161238425\n",
+      "0.31702405800521294\n",
+      "0.2114378341002251\n",
+      "0.12622217096968308\n",
+      "0.06988522765929\n",
+      "0.036757536629974275\n",
+      "0.017942924481501726\n",
+      "0.0070756162271398415\n",
+      "0.0005119468375004432\n",
+      "0.003698812536389179\n",
+      "0.006590165046403695\n",
+      "0.008719561745389709\n",
+      "0.010398725049715174\n",
+      "0.01181080663570816\n",
+      "0.01306999962503802\n",
+      "0.014252341439315447\n",
+      "0.015412060931818933\n",
+      "0.01659058414055703\n",
+      "0.01782174325629804\n",
+      "0.019134978012696813\n",
+      "0.020557450358407475\n",
+      "0.022115558994343143\n",
+      "0.02383611987328671\n",
+      "0.02574736439465522\n",
+      "0.02787984548498948\n",
+      "0.03026730594273791\n",
+      "0.032947538679256816\n",
+      "0.03596324558849784\n",
+      "0.03936287309745537\n",
+      "0.04320135940688802\n",
+      "0.04754065935909127\n",
+      "0.05244980096077244\n",
+      "0.058004049267572466\n",
+      "0.06428247867973151\n",
+      "0.0713628543250511\n",
+      "0.07931219144133625\n",
+      "0.08817077437715488\n",
+      "0.09792705008058987\n",
+      "0.1084813340462448\n",
+      "0.11959893426643273\n",
+      "0.1308598055205104\n",
+      "0.1416230660430793\n",
+      "0.1510374797164561\n",
+      "0.1581322214338978\n",
+      "0.1619990907937687\n",
+      "0.16202305509789933\n",
+      "0.15806412646508625\n",
+      "0.15049679275216576\n",
+      "0.14009020314283258\n",
+      "0.12780088054536423\n",
+      "0.11457517377189513\n",
+      "0.10121894277157381\n",
+      "0.08834047896872375\n",
+      "0.07634638312104697\n",
+      "0.06546741553043031\n",
+      "0.055797160058966844\n",
+      "0.04733230115173521\n",
+      "0.040007978616722985\n",
+      "0.033725345147359545\n",
+      "0.028371057127321797\n",
+      "0.023829887247373782\n",
+      "0.019992151752861266\n",
+      "0.01675756492657432\n",
+      "0.014036805316610978\n",
+      "0.011751712947697434\n",
+      "0.009834729013108823\n",
+      "0.00822796294721231\n",
+      "0.0068821177964697\n",
+      "0.0057554055839963425\n",
+      "0.004812522852923217\n",
+      "0.004023719654357505\n",
+      "0.003363973798020758\n",
+      "0.0028122702278157163\n",
+      "0.0023509791336336237\n",
+      "0.0019653235189718513\n",
+      "0.0016429259807656082\n",
+      "0.0013734245613781226\n",
+      "0.00114814818950284\n",
+      "0.0009598431357881853\n",
+      "0.0008024428977797093\n",
+      "0.0006708749017532157\n",
+      "0.0005608983165898752\n",
+      "0.00046896809468264253\n",
+      "0.0003921210799300301\n",
+      "0.000327880655312196\n",
+      "0.0002741769480434586\n",
+      "0.00022928007796427783\n",
+      "0.00019174433302846517\n",
+      "0.00016036149368594543\n",
+      "0.0001341218137406175\n",
+      "0.00011218140624817962\n",
+      "9.383498593305007e-05\n",
+      "7.849309026288775e-05\n",
+      "6.566304432198411e-05\n",
+      "5.493305488530886e-05\n",
+      "4.595891956085119e-05\n",
+      "3.8452921250931034e-05\n",
+      "3.217454859367752e-05\n",
+      "2.6922742115287334e-05\n",
+      "2.2529415194871838e-05\n",
+      "1.8854040046867304e-05\n",
+      "1.5779123653603123e-05\n",
+      "1.3206427151390976e-05\n",
+      "1.1053806463134917e-05\n",
+      "9.25257191770612e-06\n"
      ]
     }
    ],
@@ -514,7 +607,7 @@
     "lr = 0.1\n",
     "err = 1\n",
     "while err > 1e-5:\n",
-    "    grad = gradient(params, expectation_energy, pi/1.2)\n",
+    "    grad = gradient(params, expectation_energy, pi/1.1)\n",
     "    params = params - lr*grad\n",
     "    err = abs(sum(params - last_params))\n",
     "    last_params = np.array(params)\n",
@@ -523,16 +616,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-11.999999999605425+0j)"
+       "(-11.99999999921216+0j)"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,6 +633,13 @@
    "source": [
     "expectation_energy(params)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
