--- a/vqe_2q bell base.ipynb
+++ b/vqe_2q bell base.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cuda is not available!\n",
+      "logicqubit version 1.5.8\n"
+     ]
+    }
+   ],
    "source": [
     "from logicqubit.logic import *\n",
     "from cmath import *\n",
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +63,7 @@
        "       [ 0,  0,  0,  1]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +105,7 @@
        "(-10+0j)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,11 +148,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:586: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[k] = func(sim[k])\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:611: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxe\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:618: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxr\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:614: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxr\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:637: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxcc\n",
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:627: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[-1] = fxc\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -171,6 +198,14 @@
       "             x: array([ 5.31847022, -0.42327127, -3.1307354 ,  1.06588762,  1.01423211,\n",
       "       -3.42077752])\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cleoner/anaconda3/lib/python3.8/site-packages/scipy/optimize/optimize.py:644: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  fsim[j] = func(sim[j])\n"
+     ]
     }
    ],
    "source": [
@@ -190,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,14 +400,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.740998722971736\n",
+      "0.7664059946733903\n",
+      "2.6551149987384\n",
+      "1.2608214802431843\n",
+      "1.6463140203823585\n",
+      "0.9882522116289967\n",
+      "0.7597045148619697\n",
+      "0.7288509454263662\n",
+      "0.48616133345178747\n",
+      "0.5674605061569935\n",
+      "0.38406516697773163\n",
+      "0.43028564541804637\n",
+      "0.29331113347599436\n",
+      "0.3180409806639399\n",
+      "0.22291660083314208\n",
+      "0.23564204761260749\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10773/2399136664.py:14: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "/tmp/ipykernel_13066/2399136664.py:14: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  gradients[i] = expectation_right - expectation_left\n"
      ]
     },
@@ -380,47 +437,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.242381289750311\n",
-      "1.2889758380243934\n",
-      "0.8469000184874783\n",
-      "1.715505786108866\n",
-      "1.2857087151314395\n",
-      "0.6665949071449118\n",
-      "0.6217152863618391\n",
-      "0.4502480346945008\n",
-      "0.4015030288008472\n",
-      "0.3084211700757258\n",
-      "0.26803408924379646\n",
-      "0.21245510675985635\n",
-      "0.18154598875298378\n",
-      "0.14636982828737843\n",
-      "0.1237463383802897\n",
-      "0.10074594911990808\n",
-      "0.08459198537134305\n",
-      "0.06927493025400655\n",
-      "0.05790614903768021\n",
-      "0.04759712440969022\n",
-      "0.03966686651250573\n",
-      "0.03268382882723664\n",
-      "0.027183388111598594\n",
-      "0.022434057092212578\n",
-      "0.018633066423850764\n",
-      "0.015394340051459787\n",
-      "0.01277418938381536\n",
-      "0.010561655143450865\n",
-      "0.00875847779291572\n",
-      "0.007245152363900109\n",
-      "0.006005594294535843\n",
-      "0.004969651583073942\n",
-      "0.004118184616198395\n",
-      "0.0034086270007260833\n",
-      "0.0028240437050082168\n",
-      "0.0023378482643301446\n",
-      "0.0019366364025408256\n",
-      "0.001603400193223914\n",
-      "0.0013281053403841891\n",
-      "0.0010996639112277329\n",
-      "0.0009107986294276671\n"
+      "0.17091061131625096\n",
+      "0.17690361978602842\n",
+      "0.13286436551320124\n",
+      "0.1350978736282606\n",
+      "0.1047919107121954\n",
+      "0.10491825192171336\n",
+      "0.0837058159106186\n",
+      "0.08266834303990159\n",
+      "0.06753875093640191\n",
+      "0.06589648464516769\n",
+      "0.05490283477970613\n",
+      "0.0529959455511186\n",
+      "0.04486783316222952\n",
+      "0.04290418378493158\n",
+      "0.03679987111384837\n",
+      "0.03490346410358293\n",
+      "0.030255093195600533\n",
+      "0.02849544969493395\n",
+      "0.024912658187603715\n",
+      "0.023323817622205006\n",
+      "0.0205332435402516\n",
+      "0.019126519558116256\n",
+      "0.016933316866161174\n",
+      "0.015705975012091533\n",
+      "0.013968936519843905\n",
+      "0.012910073278434617\n",
+      "0.011525275889824105\n",
+      "0.010619738007284787\n",
+      "0.009509607723144992\n",
+      "0.008740537754570302\n",
+      "0.007846417010252585\n",
+      "0.0071968454167906926\n",
+      "0.006473860085199415\n",
+      "0.005927646503809669\n",
+      "0.005341106487352892\n",
+      "0.004883446257502394\n",
+      "0.004406284195538374\n",
+      "0.004023932295785418\n",
+      "0.0036348551808148\n",
+      "0.0033161729228793763\n",
+      "0.002998310149989969\n",
+      "0.002733206203465899\n",
+      "0.0024731080036946296\n",
+      "0.0022529213447672614\n",
+      "0.002039807784688666\n",
+      "0.0018571634170972545\n",
+      "0.00168235488315098\n",
+      "0.0015310116825909825\n",
+      "0.0013874924506602632\n",
+      "0.001262194729184235\n",
+      "0.0011442752984405363\n",
+      "0.0010406145568409575\n",
+      "0.0009436681184822188\n"
      ]
     }
    ],
@@ -437,16 +506,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-9.999999421740936+0j)"
+       "(-9.999986367379375+0j)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
