--- a/qft 3q.ipynb
+++ b/qft 3q.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -116,29 +116,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.        ],\n",
-       "       [ 0.78539816],\n",
-       "       [ 1.57079633],\n",
-       "       [ 2.35619449],\n",
-       "       [ 3.14159265],\n",
-       "       [-2.35619449],\n",
-       "       [-1.57079633],\n",
-       "       [-0.78539816]])"
+       "array([[   0.],\n",
+       "       [  45.],\n",
+       "       [  90.],\n",
+       "       [ 135.],\n",
+       "       [ 180.],\n",
+       "       [-135.],\n",
+       "       [ -90.],\n",
+       "       [ -45.]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "logicQuBit.getPsiAtAngles(degree=False)\n",
+    "logicQuBit.getPsiAtAngles(degree=True)\n",
     "\n",
     "# como 360/8=45 os angulos são multiplos de 45\n",
     "# 1Hz, \"1*45\" -> 360/45  = 8  8/8=1     \n",
